settings update, better previews

--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,6 @@
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
 	"description": "All-in-one solution for folder icons, icon colors, and folder colors in Obsidian.",
-	"author": "",
+	"author": "Gavin Picard",
 	"isDesktopOnly": false
 }
