--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "iconocolor",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"description": "All-in-one solution for folder icons, icon colors, and folder colors in Obsidian.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
-	"keywords": [],
-	"author": "",
+	"keywords": ["icon", "color", "folder", "icons", "colors", "folder colors", "icon colors", "folder icons"],
+	"author": "Gavin Picard",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
