--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Iconocolor",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "An all-in-one plugin for folder icons and coloring featuring auto-gradients",
+	"description": "An all-in-one plugin for folder icons and coloring featuring auto-gradients.",
 	"author": "Gavin Picard",
 	"isDesktopOnly": false
 }
