--- a/package.json
+++ b/package.json
@@ -8,17 +8,28 @@
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
-	"keywords": ["icon", "color", "folder", "icons", "colors", "folder colors", "icon colors", "folder icons"],
+	"keywords": [
+		"icon",
+		"color",
+		"folder",
+		"icons",
+		"colors",
+		"folder colors",
+		"icon colors",
+		"folder icons"
+	],
 	"author": "Gavin Picard",
 	"license": "MIT",
 	"devDependencies": {
 		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
+		"@typescript-eslint/eslint-plugin": "^8.50.1",
+		"@typescript-eslint/parser": "^8.50.1",
 		"builtin-modules": "3.3.0",
 		"esbuild": "0.17.3",
+		"eslint": "^9.39.2",
+		"eslint-plugin-obsidianmd": "^0.1.9",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"typescript": "^5.9.3"
 	}
 }
